2017-09-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct misuse of __INSIDE_MSYS__ feature test.

	* include/winsock2.h [!__INSIDE_MSYS__]: One of several instances
	omits "defined" operator; it should be expressed consistently as...
	[! defined __INSIDE_MSYS__]: ...this; correct it.

2017-09-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare for <winsock.h> vs. <winsock2.h> refactoring.

	* include/winsock.h: Tidy layout; assert copyright.
	(_BEGIN_C_DECLS, _END_C_DECLS): Use them to avoid C++ name mangling.

	* include/winsock2.h: Assert copyright; tidy layout, ensuring that all
	sections, which are common with <winsock.h>, are laid out congruently.
	(_BEGIN_C_DECLS, _END_C_DECLS): Use them to avoid C++ name mangling.
	(SD_RECEIVE, SD_SEND, SD_BOTH): Delete duplicate constant definitions.
	(SO_DONTLINGER, MSG_MAXIOVLEN): Likewise, delete duplicate definitions.
	(__AW_ALIAS__, __AW_SUFFIXED__): Use them, to avoid reproduction of...
	[UNICODE]: ...alternative typedefs, and function name aliases...
	[!UNICODE]: ...versus this case.

2017-08-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve secondary issue arising from MinGW-Bug [#2350]

	* include/winuser.h (GetTitleBarInfo)
	[_WIN32_WINDOWS >= _WIN32_WINDOWS_98]: Remove exposure restriction;
	it conflicted with current MSDN documentation, so now falls within...
	[_WIN32_WINNT >= Win2K || _WIN32_WINDOWS >= Win98]: ...this.

2017-08-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve MinGW-Bug [#2350]

	* include/winuser.h (GetTitleBarInfo): Move prototype after...
	(PTITLEBARINFO): ...this type definition; it is used as a function
	argument type, so must be defined beforehand.

2017-08-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Extend testsuite to cover winsock fd_set macro operations.

	* tests/winsock.at: New file; it implements appropriate tests, and
	enables use of "-k winsock", "-k winsock2", and "-k fd_set" autotest